--- a/lesson-plan.tex
+++ b/lesson-plan.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper, 11pt]{article}
 \usepackage{fullpage} % changes the margin
+\pagestyle{empty}
 \begin{document}
 \vspace*{-0.75in}
 \noindent\large\textbf{Program Title} \hfill \textbf{Name} \\
