--- a/lesson-plan.tex
+++ b/lesson-plan.tex
@@ -3,7 +3,7 @@
 \pagestyle{empty}
 \begin{document}
 \vspace*{-0.75in}
-\noindent\large\textbf{Program Title} \hfill \textbf{Name} \\
+\noindent\LARGE\textbf{Program Title} \hfill \textbf{Name} \\
 \normalsize {Lion Technology Solutions} \hfill info@lionsolutions.tech \\
 \normalsize 
 
