--- a/lesson-plan.tex
+++ b/lesson-plan.tex
@@ -4,7 +4,7 @@
 \begin{document}
 \vspace*{-0.75in}
 \noindent\LARGE\textbf{Program Title} \hfill \textbf{Name} \\
-\normalsize {Lion Technology Solutions} \hfill info@lionsolutions.tech \\
+\Large {Lion Technology Solutions} \hfill @lionsolutions.tech \\
 \normalsize 
 
 % Lesson title
